services/betting-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: betting-service
spec:
  selector:
    app: betting-service
  ports:
    - name: http
      port: 80
      targetPort: 8084
